[package]
name = "qevy"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/BrianWiz/qevy"
description = "Quake .map files for the Bevy game engine."
license = "MIT OR Apache-2.0"
keywords = ["quake", "bevy", "game", "engine", "map", "bsp"]
authors = ["Brian Howard <brian.howard@hey.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-lock = "3.0.0"
bevy = "0.12"
regex = "1.10.2"
ron = "0.8.1"
thiserror = "1.0.50"
usage = "1.4.0"

shalrath = "0.2.5"
shambler = { git = "https://github.com/BrianWiz/shambler.git" }
bevy_xpbd_3d = { git = "https://github.com/Jondolf/bevy_xpbd", rev = "7a97c56dfb12cc9cf5c702d542b0b7d5866b4189" }

bevy-inspector-egui = "0.22"

[[example]]
name = "first_person"
